test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/5.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:0ab02ac118de5b112b253bb7cacf9935ab8de45402e18dfacf8e82a559a7d804
size 4560251
